--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Austin GiveCamp</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Austin Give Camp">
+    <meta name="description" content="Austin Give Camp 2014">
 
     <!--== CSS Files ==-->
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
