added image files

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="blk">
-                    <h1>Developer GiveCamp<br/>2014</h1>
+                    <h1>#AustinGiveCamp</h1>
                 </div>
             </div>
             <div class="row">
@@ -83,6 +83,7 @@
 
             <!--== Main Slider ==-->
             <ul class="slides">
+                <li><img src="images/demo/bg-slide-03.jpg" alt="Austin GiveCamp"/></li>
                 <li><img src="images/demo/bg-slide-01.jpg" alt="Slide Image"/></li>
                 <li><img src="images/demo/bg-slide-02.jpg" alt="Slide Image 2"/></li>
             </ul>
