--- a/src/index.html
+++ b/src/index.html
@@ -84,8 +84,8 @@
             <!--== Main Slider ==-->
             <ul class="slides">
                 <li><img src="images/demo/bg-slide-03.jpg" alt="Austin GiveCamp"/></li>
-                <li><img src="images/demo/bg-slide-01.jpg" alt="Slide Image"/></li>
-                <li><img src="images/demo/bg-slide-02.jpg" alt="Slide Image 2"/></li>
+                <li><img src="images/demo/bg-slide-01.jpg" alt="Austin GiveCamp"/></li>
+                <li><img src="images/demo/bg-slide-02.jpg" alt="Austin GiveCamp"/></li>
             </ul>
 
         </div>
@@ -267,8 +267,9 @@
     <div class="col-md-7 col-sm-12">
         <div class="flexslider">
             <ul class="slides">
-                <li><img src="images/demo/slide-01.jpg" alt="Slide Image"/></li>
+                <li><img src="images/demo/slide-01.jpg" alt="Slide Image 1"/></li>
                 <li><img src="images/demo/slide-02.jpg" alt="Slide Image 2"/></li>
+                <li><img src="images/demo/slide-03.jpg" alt="Slide Image 3"/></li>
             </ul>
         </div>
     </div>
