Adding Schedule items.

--- a/src/index.html
+++ b/src/index.html
@@ -147,8 +147,9 @@
     <div class="col-md-7 col-sm-12">
         <div class="content-tabs">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#tab1" data-toggle="tab">Day 1</a></li>
-                <li><a href="#tab2" data-toggle="tab">Day 2</a></li>
+                <li class="active"><a href="#tab1" data-toggle="tab">Oct 9</a></li>
+                <li><a href="#tab2" data-toggle="tab">Oct 25</a></li>
+                <li><a href="#tab3" data-toggle="tab">Oct 26</a></li>
             </ul>
 
             <div class="tab-content">
@@ -156,36 +157,16 @@
                     <ul class="accordion-group">
                         <li class="accordion">
                             <a class="accordion-heading">
-                                <time>9:30</time>
-                                <h4 class="accordion-title">Breakfast Meet and Greet</h4>
+                                <time>7:00 pm</time>
+                                <h4 class="accordion-title">Charity Meet and Greet</h4>
                                 <span class="fa fa-plus-circle pull-right"></span>
                             </a>
 
                             <div class="accordion-body">
-                                Let us get acquainted with the other devs and projects over a cup of joe, or OJ!
-                            </div>
-                        </li>
-                        <li class="accordion">
-                            <a class="accordion-heading">
-                                <time>10:00</time>
-                                <h4 class="accordion-title">Let's get coding!</h4>
-                                <span class="fa fa-plus-circle pull-right"></span>
-                            </a>
-
-                            <div class="accordion-body">
-                                Projects kick off and coding madness begins!
-                            </div>
-                        </li>
-                        <li class="accordion">
-                            <a class="accordion-heading">
-                                <time>10:00</time>
-                                <h4 class="accordion-title">Code till ya can't code no more!</h4>
-                                <span class="fa fa-plus-circle pull-right"></span>
-                            </a>
-
-                            <div class="accordion-body">
-                                Well, we could code through the night, but rested developers are much more valuable than
-                                exhausted ones!
+                                e Charities will each give a 2 minute presentation about who they are and what they hope to get out of the GiveCamp project.
+                                This will take maybe 1/2 hr. We will also hand out one-page developer-written technical summaries of the projects.  Then,
+                                during the next half hour, developers get time to chat with the charities, review the summaries, and select their
+                                charity preferences.
                             </div>
                         </li>
                     </ul>
@@ -227,6 +208,44 @@
                         </li>
                     </ul>
                 </div>
+                <div class="tab-pane" id="tab3">
+                    <ul class="accordion-group">
+                        <li class="accordion">
+                            <a class="accordion-heading">
+                                <time>10:00</time>
+                                <h4 class="accordion-title">Day 2 coding continues!</h4>
+                                <span class="fa fa-plus-circle pull-right"></span>
+                            </a>
+
+                            <div class="accordion-body">
+                                Grab some brunch and get back into delivering delight!
+                            </div>
+                        </li>
+                        <li class="accordion">
+                            <a class="accordion-heading">
+                                <time>12:30</time>
+                                <h4 class="accordion-title">Lunch is Served</h4>
+                                <span class="fa fa-plus-circle pull-right"></span>
+                            </a>
+
+                            <div class="accordion-body">
+                                Keep coding and throw down some grub!
+                            </div>
+                        </li>
+                        <li class="accordion">
+                            <a class="accordion-heading">
+                                <time>5:00</time>
+                                <h4 class="accordion-title">Project Showcase</h4>
+                                <span class="fa fa-plus-circle pull-right"></span>
+                            </a>
+
+                            <div class="accordion-body">
+                                Wrap up the weekend with a showcase of all the killer work everyone has delivered!
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </div>
     </div>
@@ -318,14 +337,14 @@
         <ul class="accordion-group">
             <li class="accordion">
                 <a class="accordion-heading">
-                    <h4 class="accordion-title">Lorem ipsum dolor sit amet ?</h4>
+                    <h4 class="accordion-title"> am vegetarian/vegan/gluten free/have a food allergy, etc. What should I do?</h4>
                     <span class="fa fa-plus-circle pull-right"></span>
                 </a>
 
                 <div class="accordion-body">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, ratione nostrum atque nobis debitis
-                    doloremque. Fugit, officia laudantium repellat assumenda eligendi vel sed dolore delectus. Vitae
-                    sequi cum doloribus veniam.
+                    Please let us know if you have dietary restrictions. We can't promise that we will be able to accommodate you,
+                    but we will keep you in mind and will let you know closer to the event if we can accommodate your restrictions.
+                    We will have a fridge and microwave oven that you can use if the provided food will not work for you.
                 </div>
             </li>
             <li class="accordion">
