--- a/src/index.html
+++ b/src/index.html
@@ -151,22 +151,32 @@
                 <li><a href="#tab2" data-toggle="tab">Oct 25</a></li>
                 <li><a href="#tab3" data-toggle="tab">Oct 26</a></li>
             </ul>
-
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
                     <ul class="accordion-group">
-                        <li class="accordion">
+                        <li class="accordion current">
                             <a class="accordion-heading">
                                 <time>7:00 pm</time>
                                 <h4 class="accordion-title">Charity Meet and Greet</h4>
-                                <span class="fa fa-plus-circle pull-right"></span>
+                                <span class="fa fa-minus-circle pull-right"></span>
                             </a>
 
                             <div class="accordion-body">
-                                e Charities will each give a 2 minute presentation about who they are and what they hope to get out of the GiveCamp project.
-                                This will take maybe 1/2 hr. We will also hand out one-page developer-written technical summaries of the projects.  Then,
-                                during the next half hour, developers get time to chat with the charities, review the summaries, and select their
-                                charity preferences.
+                                <p>Two week prior to the coding weekend we all get together for a meet and greet, Dev's
+                                    and Charities.</p>
+
+                                <p>
+                                    Charities will each give a 2 minute presentation about who they are and what they
+                                    hope to get out of the GiveCamp project.
+                                    This will take maybe 1/2 hr. We will also hand out one-page developer-written
+                                    technical summaries of the projects.
+                                </p>
+
+                                <p>Then, during the next half hour, developers get time to chat with the charities,
+                                    review
+                                    the summaries, and select their
+                                    charity preferences.</p>
+
                             </div>
                         </li>
                     </ul>
@@ -176,7 +186,7 @@
                         <li class="accordion">
                             <a class="accordion-heading">
                                 <time>10:00</time>
-                                <h4 class="accordion-title">Day 2 coding continues!</h4>
+                                <h4 class="accordion-title">Day Kickoff!</h4>
                                 <span class="fa fa-plus-circle pull-right"></span>
                             </a>
 
@@ -296,9 +306,6 @@
 <!--==========-->
 
 
-
-
-
 <!--===============================-->
 <!--== FAQ ========================-->
 <!--===============================-->
@@ -337,14 +344,18 @@
         <ul class="accordion-group">
             <li class="accordion">
                 <a class="accordion-heading">
-                    <h4 class="accordion-title"> am vegetarian/vegan/gluten free/have a food allergy, etc. What should I do?</h4>
+                    <h4 class="accordion-title">I am vegetarian/ vegan/ gluten free/ have a food allergy, etc. What should I
+                        do?</h4>
                     <span class="fa fa-plus-circle pull-right"></span>
                 </a>
 
                 <div class="accordion-body">
-                    Please let us know if you have dietary restrictions. We can't promise that we will be able to accommodate you,
-                    but we will keep you in mind and will let you know closer to the event if we can accommodate your restrictions.
-                    We will have a fridge and microwave oven that you can use if the provided food will not work for you.
+                    Please let us know if you have dietary restrictions. We can't promise that we will be able to
+                    accommodate you,
+                    but we will keep you in mind and will let you know closer to the event if we can accommodate your
+                    restrictions.
+                    We will have a fridge and microwave oven that you can use if the provided food will not work for
+                    you. <#insert contect email ></#insert>
                 </div>
             </li>
             <li class="accordion">
@@ -405,9 +416,8 @@
     </div>
     <div class="col-sm-12">
         <form id="register-form" method="post" class="form">
-
-            <div class="col-md-3 col-sm-12">
-                <input type="submit" value="Register" name="submit">
+            <div class="col-md-offset-4 col-md-4 col-sm-12">
+                <input type="submit" value="Register" name="submit" />
             </div>
         </form>
     </div>
