added partner logos. finalized schedule. linked to eventbrite.

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="row">
                 <div class="blk">
-                    <input type="submit" value="Register" name="submit" id="goregister">
+                    <a class="btn" href="https://www.eventbrite.com/e/austin-give-camp-2014-tickets-12557388487" target="_blank">Register</a>
                 </div>
             </div>
         </div>
@@ -148,8 +148,9 @@
         <div class="content-tabs">
             <ul class="nav nav-tabs">
                 <li class="active"><a href="#tab1" data-toggle="tab">Oct 9</a></li>
-                <li><a href="#tab2" data-toggle="tab">Oct 25</a></li>
-                <li><a href="#tab3" data-toggle="tab">Oct 26</a></li>
+                <li><a href="#tab2" data-toggle="tab">Oct 24</a></li>
+                <li><a href="#tab3" data-toggle="tab">Oct 25</a></li>
+                <li><a href="#tab4" data-toggle="tab">Oct 26</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
@@ -173,25 +174,47 @@
                                 </p>
 
                                 <p>Then, during the next half hour, developers get time to chat with the charities,
-                                    review
-                                    the summaries, and select their
-                                    charity preferences.</p>
+                                    review the summaries, and select their charity preferences.</p>
+
+                                <p>We'll provide snacks/appetizers! :)</p>
 
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="tab-pane" id="tab2">
+
+                <div class="tab-pane active" id="tab2">
+                    <ul class="accordion-group">
+                        <li class="accordion current">
+                            <a class="accordion-heading">
+                                <time>6:30 pm - 9:30</time>
+                                <h4 class="accordion-title">Coding Begins!!!</h4>
+                                <span class="fa fa-minus-circle pull-right"></span>
+                            </a>
+
+                            <div class="accordion-body">
+                                <p>Houston, wel have coding Lift Off! Coding begins and the</p>
+
+                                <p>
+                                    As developers, we need our beauty sleep, so we call it a night at 9:30 and go home for sleepy time!
+                                </p>
+
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="tab-pane" id="tab3">
                     <ul class="accordion-group">
                         <li class="accordion">
                             <a class="accordion-heading">
                                 <time>10:00</time>
-                                <h4 class="accordion-title">Day Kickoff!</h4>
+                                <h4 class="accordion-title">Day 2!</h4>
                                 <span class="fa fa-plus-circle pull-right"></span>
                             </a>
 
                             <div class="accordion-body">
-                                Grab some brunch and get back into delivering delight!
+                                Doors open and the day begins with coffee, bagels, donuts and we get back into delivering delight!
                             </div>
                         </li>
                         <li class="accordion">
@@ -208,27 +231,27 @@
                         <li class="accordion">
                             <a class="accordion-heading">
                                 <time>5:00</time>
-                                <h4 class="accordion-title">Project Showcase</h4>
+                                <h4 class="accordion-title">Dinner is served!</h4>
                                 <span class="fa fa-plus-circle pull-right"></span>
                             </a>
 
                             <div class="accordion-body">
-                                Wrap up the weekend with a showcase of all the killer work everyone has delivered!
+                                Feed the code with some grub!!!
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="tab-pane" id="tab3">
+                <div class="tab-pane" id="tab4">
                     <ul class="accordion-group">
                         <li class="accordion">
                             <a class="accordion-heading">
                                 <time>10:00</time>
-                                <h4 class="accordion-title">Day 2 coding continues!</h4>
+                                <h4 class="accordion-title">Day 3 final stretch!</h4>
                                 <span class="fa fa-plus-circle pull-right"></span>
                             </a>
 
                             <div class="accordion-body">
-                                Grab some brunch and get back into delivering delight!
+                                Doors open and the day begins with coffee, bagels, donuts and final stretch of coding commences!
                             </div>
                         </li>
                         <li class="accordion">
@@ -344,7 +367,8 @@
         <ul class="accordion-group">
             <li class="accordion">
                 <a class="accordion-heading">
-                    <h4 class="accordion-title">I am vegetarian/ vegan/ gluten free/ have a food allergy, etc. What should I
+                    <h4 class="accordion-title">I am vegetarian/ vegan/ gluten free/ have a food allergy, etc. What
+                        should I
                         do?</h4>
                     <span class="fa fa-plus-circle pull-right"></span>
                 </a>
@@ -355,7 +379,7 @@
                     but we will keep you in mind and will let you know closer to the event if we can accommodate your
                     restrictions.
                     We will have a fridge and microwave oven that you can use if the provided food will not work for
-                    you. <#insert contect email ></#insert>
+                    you. <a href="mailto:kristi@headspring.com">kristi@headspring.com</a>
                 </div>
             </li>
             <li class="accordion">
@@ -383,17 +407,31 @@
     <div class="col-sm-12">
         <div class="section-header text-center">
             <h2>Partners</h2>
-            <h4>Awesome section description goes here.</h4>
+            <h4>Austin GiveCamp is partnering up with <a href="http://www.builasign.com" target="_blank">BuildASign</a>
+                and their
+                <a href="http://www.createathonaustin.org/" target="_blank">CreateAThon</a> event, 24-hour work-around-the-clock event
+                where creative
+                professionals provide free creative services to Central Texas nonprofit organizations.</a></h4>
         </div>
     </div>
     <div class="col-sm-12">
         <div id="carousel" class="owl-carousel">
-            <div class="item"><img src="images/demo/partners/logo-01.png" alt="Logo 1"></div>
-            <div class="item"><img src="images/demo/partners/logo-02.png" alt="Logo 2"></div>
-            <div class="item"><img src="images/demo/partners/logo-03.png" alt="Logo 3"></div>
-            <div class="item"><img src="images/demo/partners/logo-04.png" alt="Logo 4"></div>
-            <div class="item"><img src="images/demo/partners/logo-05.png" alt="Logo 5"></div>
-            <div class="item"><img src="images/demo/partners/logo-06.png" alt="Logo 6"></div>
+            <div class="item">
+                <a href="http://www.createathonaustin.org/" target="_blank">
+                    <img src="images/demo/partners/createathon-logo.png" alt="CreateAThonAustin">
+                </a>
+            </div>
+
+            <div class="item">
+                <a href="http://www.headspring.com" target="_blank">
+                    <img src="images/demo/partners/headspring-logo.gif" alt="Logo 2">
+                </a>
+            </div>
+
+            <!--<div class="item"><img src="images/demo/partners/logo-03.png" alt="Logo 3"></div>-->
+            <!--<div class="item"><img src="images/demo/partners/logo-04.png" alt="Logo 4"></div>-->
+            <!--<div class="item"><img src="images/demo/partners/logo-05.png" alt="Logo 5"></div>-->
+            <!--<div class="item"><img src="images/demo/partners/logo-06.png" alt="Logo 6"></div>-->
         </div>
         <div class="owl-carousel-navigation">
             <a class="owl-btn prev fa fa-angle-left"></a>
@@ -417,7 +455,7 @@
     <div class="col-sm-12">
         <form id="register-form" method="post" class="form">
             <div class="col-md-offset-4 col-md-4 col-sm-12">
-                <input type="submit" value="Register" name="submit" />
+                <a class="btn" href="https://www.eventbrite.com/e/austin-give-camp-2014-tickets-12557388487" target="_blank">Register</a>
             </div>
         </form>
     </div>
