--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
         <div class="event-info">
             <div class="icon fa fa-calendar"></div>
             <div class="info">
-                <h3>25 & 26 October</h3>
+                <h3>24-26 October</h3>
                 <span>This year, of course.</span>
             </div>
         </div>
@@ -131,7 +131,7 @@
         <div class="event-info">
             <div class="icon fa fa-users"></div>
             <div class="info">
-                <h3>50 Seats</h3>
+                <h3>Cool peeps!</h3>
                 <span>Hurry up, register!</span>
             </div>
         </div>
