text and formatting tweaks/ fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -148,9 +148,9 @@
         <div class="content-tabs">
             <ul class="nav nav-tabs">
                 <li class="active"><a href="#tab1" data-toggle="tab">Oct 9</a></li>
-                <li><a href="#tab2" data-toggle="tab">Oct 24</a></li>
-                <li><a href="#tab3" data-toggle="tab">Oct 25</a></li>
-                <li><a href="#tab4" data-toggle="tab">Oct 26</a></li>
+                <li><a href="#tab2" data-toggle="tab">Oct24</a></li>
+                <li><a href="#tab3" data-toggle="tab">Oct25</a></li>
+                <li><a href="#tab4" data-toggle="tab">Oct26</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
@@ -161,7 +161,6 @@
                                 <h4 class="accordion-title">Charity Meet and Greet</h4>
                                 <span class="fa fa-minus-circle pull-right"></span>
                             </a>
-
                             <div class="accordion-body">
                                 <p>Two week prior to the coding weekend we all get together for a meet and greet, Dev's
                                     and Charities.</p>
@@ -176,7 +175,7 @@
                                 <p>Then, during the next half hour, developers get time to chat with the charities,
                                     review the summaries, and select their charity preferences.</p>
 
-                                <p>We'll provide snacks/appetizers! :)</p>
+                                <p>We'll provide snacks and appetizers! :)</p>
 
                             </div>
                         </li>
@@ -185,7 +184,7 @@
 
                 <div class="tab-pane active" id="tab2">
                     <ul class="accordion-group">
-                        <li class="accordion current">
+                        <li class="accordion">
                             <a class="accordion-heading">
                                 <time>6:30 pm - 9:30</time>
                                 <h4 class="accordion-title">Coding Begins!!!</h4>
@@ -193,7 +192,7 @@
                             </a>
 
                             <div class="accordion-body">
-                                <p>Houston, wel have coding Lift Off! Coding begins and the</p>
+                                <p>Houston, we have coding Lift Off! Coding begins!</p>
 
                                 <p>
                                     As developers, we need our beauty sleep, so we call it a night at 9:30 and go home for sleepy time!
@@ -285,7 +284,9 @@
     <div class="col-md-5 col-sm-12">
         <h2>Schedule</h2>
 
-        <p>Being our third year holding this event, we know how to do things right.</p>
+        <p>An initial meet and greet will take place 2 weeks prior to the event on October 9th.</p>
+        <p>On October 24, Friday night, the main event kicks off!</p>
+        <p></p>
         <ul>
             <li>Meals provided.</li>
             <li>Comfortable working environment.</li>
@@ -444,7 +445,9 @@
         <form id="register-form" method="post" class="form">
             <div class="col-md-offset-4 col-md-4 col-sm-12">
                 <a class="btn" href="https://www.eventbrite.com/e/austin-give-camp-2014-tickets-12557388487" target="_blank">Register</a>
+                <br /><br />
             </div>
+
         </form>
     </div>
 </section>
