formatting and text fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -182,20 +182,21 @@
                     </ul>
                 </div>
 
-                <div class="tab-pane active" id="tab2">
+                <div class="tab-pane" id="tab2">
                     <ul class="accordion-group">
                         <li class="accordion">
                             <a class="accordion-heading">
                                 <time>6:30 pm - 9:30</time>
                                 <h4 class="accordion-title">Coding Begins!!!</h4>
-                                <span class="fa fa-minus-circle pull-right"></span>
+                                <span class="fa fa-plus-circle pull-right"></span>
                             </a>
 
                             <div class="accordion-body">
-                                <p>Houston, we have coding Lift Off! Coding begins!</p>
+                                <p>Houston, we have Lift Off! Coding begins!</p>
 
                                 <p>
-                                    As developers, we need our beauty sleep, so we call it a night at 9:30 and go home for sleepy time!
+                                    As developers, well as humans in general, we need our beauty sleep, so we call it a night
+                                    around 9:30 and go home for sleepy time!
                                 </p>
 
                             </div>
@@ -314,8 +315,8 @@
             to deserving charities. Whether you're a developer, designer, or database admin, sign up and join in to
             help local non-profits and charities in your neck of the woods!
         </h4>
-        <blockquote>Need a quote here about how cool Give Camp is, maybe a previous nonprofit?
-        </blockquote>
+        <!--<blockquote>Need a quote here about how cool Give Camp is, maybe a previous nonprofit?-->
+        <!--</blockquote>-->
     </div>
     <div class="col-md-7 col-sm-12">
         <div class="flexslider">
