--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
                         <!--== Logo ==-->
 								<span class="navbar-brand logo">
-									<span class="fa fa-map-marker"></span>Austin GiveCamp
+									<span class="fa fa-map-marker"></span>Austin GiveCamp 2014
 								</span>
 
                     </div>
