--- a/src/index.html
+++ b/src/index.html
@@ -468,11 +468,11 @@
 
                     <!--== Social Icons ==-->
                     <ul class="social-icons">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-youtube"></a></li>
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                        <li><a href="#" class="fa fa-linkedin"></a></li>
+                        <!--<li><a href="#" class="fa fa-facebook"></a></li>-->
+                        <li><a href="https://twitter.com/austingivecamp" target="_blank" class="fa fa-twitter"></a></li>
+                        <!--<li><a href="#" class="fa fa-youtube"></a></li>-->
+                        <!--<li><a href="#" class="fa fa-instagram"></a></li>-->
+                        <!--<li><a href="#" class="fa fa-linkedin"></a></li>-->
                     </ul>
 
                 </div>
