changed mail to and it now points to service instead of Kristi. Added new FAQ.

--- a/src/index.html
+++ b/src/index.html
@@ -381,7 +381,18 @@
                     but we will keep you in mind and will let you know closer to the event if we can accommodate your
                     restrictions.
                     We will have a fridge and microwave oven that you can use if the provided food will not work for
-                    you. <a href="mailto:kristi@headspring.com">kristi@headspring.com</a>
+                    you. <a href="mailto:service@austingivecamp.com">service@austingivecamp.org</a>
+                </div>
+            </li>
+            <li class="accordion">
+                <a class="accordion-heading">
+                    <h4 class="accordion-title">Do we work through the night???</h4>
+                    <span class="fa fa-plus-circle pull-right"></span>
+                </a>
+
+                <div class="accordion-body">
+                    Nah! That would be straight cray-cray! We dev's need sleep to code!<br />
+                    We break each night, Friday and Saturday are reconvene around 10am in the morning!
                 </div>
             </li>
         </ul>
