--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
                     <ul class="accordion-group">
                         <li class="accordion">
                             <a class="accordion-heading">
-                                <time>6:30 pm - 9:30</time>
+                                <time>6:30 pm - 9:30pm</time>
                                 <h4 class="accordion-title">Coding Begins!!!</h4>
                                 <span class="fa fa-plus-circle pull-right"></span>
                             </a>
@@ -196,7 +196,7 @@
 
                                 <p>
                                     As developers, well as humans in general, we need our beauty sleep, so we call it a night
-                                    around 9:30 and go home for sleepy time!
+                                    around 9:30pm and go home for sleepy time!
                                 </p>
 
                             </div>
