fixed broken build a sign link.

--- a/src/index.html
+++ b/src/index.html
@@ -408,7 +408,7 @@
     <div class="col-sm-12">
         <div class="section-header text-center">
             <h2>Partners</h2>
-            <h4>Austin GiveCamp is partnering up with <a href="http://www.builasign.com" target="_blank">BuildASign</a>
+            <h4>Austin GiveCamp is partnering up with <a href="http://www.buildasign.com/" target="_blank">BuildASign</a>
                 and their
                 <a href="http://www.createathonaustin.org/" target="_blank">CreateAThon</a> event, 24-hour work-around-the-clock event
                 where creative
