Fixed meet and greet time and date.

--- a/src/index.html
+++ b/src/index.html
@@ -157,13 +157,13 @@
                     <ul class="accordion-group">
                         <li class="accordion current">
                             <a class="accordion-heading">
-                                <time>7:00 pm</time>
+                                <time>6:00 pm</time>
                                 <h4 class="accordion-title">Charity Meet and Greet</h4>
                                 <span class="fa fa-minus-circle pull-right"></span>
                             </a>
                             <div class="accordion-body">
                                 <p>Two week prior to the coding weekend we all get together for a meet and greet, Dev's
-                                    and Charities.</p>
+                                    and Charities. (Notice it's on Wednesday to respect ACL!)</p>
 
                                 <p>
                                     Charities will each give a 2 minute presentation about who they are and what they
